Finished up first round of static pages until J finishes content

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -26,11 +26,11 @@
           <li class="divider"></li>
           <li><%= link_to "Health Education and Promotion", page_path("health_education_and_promotion") %></a></li>
           <li class="divider"></li>
-          <li><a href="#">Outside Area of Expertise</a></li>
+          <li><%= link_to "Outside Area of Expertise", page_path("outside_expertise") %></a></li>
           <li class="divider"></li>
-          <li><a href="#">Research and Writing</a></li>
+          <li><%= link_to "Research and Writing", page_path("research_and_writing") %></a></li>
           <li class="divider"></li>
-          <li><a href="#">Teaching</a></li>
+          <li><%= link_to "Teaching", page_path("teaching") %></a></li>
           <li class="divider"></li>
           <li><a href="#">Professional Service and Participation</a></li>
           <li class="divider"></li>
