--- a/app/views/pages/health_education_and_promotion.html.erb
+++ b/app/views/pages/health_education_and_promotion.html.erb
@@ -1,7 +1,11 @@
-<div class="row">
-<h1>Health Education and Promotion</h1>
+<header>
+  <div class="row">
+    <h1>Health Education and Promotion</h1>
+  </div>
+</header>
 
-<p>This section provides an overview of my coursework in Health Education and Promotion.  It is intended to evidence my competencies in the following areas:</p>
+<div class="row">
+  <p>This section provides an overview of my coursework in Health Education and Promotion.  It is intended to evidence my competencies in the following areas:</p>
 </div>
 
 <div class="row">
