--- a/app/views/pages/personal_statement.html.erb
+++ b/app/views/pages/personal_statement.html.erb
@@ -1,5 +1,10 @@
+<header>
+  <div class="row">
+    <h1>Personal Statement</h1>
+  </div>
+</header>
+
 <div class="row">
-  <h1>Personal Statement</h1>
   <p>Hi there, and welcome to my electronic portfolio.  This is a an abbreviated compilation of my graduate level work, which includes doctoral coursework (Ph.D. in Health Education and Promotion) from my enrollment at the University of Missouri, as well as my MA Ed. in Curriculum and Instruction at Austin Peay State University in Clarksville, TN, and finally, an overview of my professional experiences.  A more complete hard copy is available for viewing in 16 Hill Hall, University of Missouri-Columbia.</p>
 
   <p>Thank you for taking the time to review my portfolio.  I have truly enjoyed the opportunity to exchange so many ideas with the many bright, passionate individuals who have led and participated in the graduate curriculum here at the University of Missouri, and I want to particularly thank all of the faculty members who work so tirelessly to contribute to the academic community.  Comments and questions about my work are always welcome; please direct them to: <a href="mailto:edujeremy@gmail.com">edujeremy@gmail.com</a></p>
