Added sidebar nav on existing pages

--- a/app/assets/stylesheets/custom_styles.scss
+++ b/app/assets/stylesheets/custom_styles.scss
@@ -16,6 +16,7 @@ header {
   h1 {
   	color: white;
   	font-family: $spinnaker;
+  	padding-left: 10px;
   }
 }
 
@@ -29,3 +30,7 @@ table thead {
   	color: white;
   }
 }
+
+.section-container > section > .title a {
+  white-space: normal;
+} 
