--- a/app/views/pages/outside_expertise.html.erb
+++ b/app/views/pages/outside_expertise.html.erb
@@ -5,91 +5,95 @@
 </header>
 
 <div class="row">
-  <p>Leisure Psychology—ludology, the study of fun and games.</p>
-  
-  <p>When I came to the University of Missouri, I was deeply curious about the science of “fun.”  I had an intuitive appreciation for the ecological approach to health promotion—that people are better able to make good decisions about health behaviors when those decisions are easy, desirable, and tempting.  Primarily, in recognition of the many populations who are not attracted to traditional recreation like sports, and find explicit exercise tedious, I wanted to know, “How can we make physical activity more fun?” </p>
-  
-  <p>To address this question, I turned to the field of motivational psychology, primarily studying intrinsic motivation, but eventually realizing the important role that extrinsic motivation and amotivational constructs played in optimizing human engagement in recreation.  In particular, I applied my learning to the field of game design, exploring the inextricable relationship between ecological systems and agent behavior.</p>  
-  
-  <p>Naturally, most of these courses also contributed to my perspectives in Health Education and Promotion directly.</p>
+  <div class="large-9 push-3 columns">
+    <div class="row">
+      <p>Leisure Psychology—ludology, the study of fun and games.</p>
+      
+      <p>When I came to the University of Missouri, I was deeply curious about the science of “fun.”  I had an intuitive appreciation for the ecological approach to health promotion—that people are better able to make good decisions about health behaviors when those decisions are easy, desirable, and tempting.  Primarily, in recognition of the many populations who are not attracted to traditional recreation like sports, and find explicit exercise tedious, I wanted to know, “How can we make physical activity more fun?” </p>
+      
+      <p>To address this question, I turned to the field of motivational psychology, primarily studying intrinsic motivation, but eventually realizing the important role that extrinsic motivation and amotivational constructs played in optimizing human engagement in recreation.  In particular, I applied my learning to the field of game design, exploring the inextricable relationship between ecological systems and agent behavior.</p>  
+      
+      <p>Naturally, most of these courses also contributed to my perspectives in Health Education and Promotion directly.</p>
 
-  <p>Perspectives in Intrinsic Motivation and Experience Structures (Many of these integrate health content and/or education in some way relevant to my area of interest.  I’ve included a brief description of each course’s contribution to my learning goals):</p>
+      <p>Perspectives in Intrinsic Motivation and Experience Structures (Many of these integrate health content and/or education in some way relevant to my area of interest.  I’ve included a brief description of each course’s contribution to my learning goals):</p>
 
-  <table>
-  	<thead>
-  	  <tr>
-  	    <td>Course Name</td>
-  	    <td>Course Number</td>
-  	    <td>Grade</td>
-  	  </tr>
-  	</thead>
-  	<tbody>
-  	  <tr>
-  	  	<td><strong>Social & Emotional Development</strong></td>
-  	  	<td>HDFS8440</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This was a seminar course on the emotional and social development in children and adolescents, which focused on contemporary research and major theories in family, school, and societal contribution. It provided essential perspectives on identity development, which is critical to an understanding of motivational psychology, particularly the acquisition of interests.  Assessment included discussion and a research paper on a selected topic.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Motivation</strong></td>
-  	  	<td>ESCP9450</td>
-  	  	<td>B</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course explores major motivational constructs and theories, including topics like extrinsic and intrinsic motivation, optimal arousal, goal orientation, self efficacy, task value, and cultural implications of motivation. Assessment included application through analysis of personal reflections and interviews, as well as a research paper on a selected topic.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Constructs of Leisure</strong></td>
-  	  	<td>PRT8400</td>
-  	  	<td>B</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course provided an in-depth examination of leisure constructs, or intrinsic motivation.  Reviews of contemporary research and classical applications of psycho-social theories of leisure behavior were followed by class discussion with application to recreational settings.  The course was assessed with weekly essays and discussion participation.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Seminar in Positive Psychology</strong></td>
-  	  	<td>ESCP7087</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course reviewed variables in human well-being, such as optimism, resilience, and self-efficacy.  The majority of topics were applicable to an understanding of human motivation, particularly intrinsic motivation topics like Self Determination Theory and the Theory of Flow.  Assessment included weekly essays and a summative research paper.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Social and Behavioral Sciences in Public Health</strong></td>
-  	  	<td>PHTH8920</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course examined major theories of motivation and behavior within the public health context.  It included an applied analysis of TRA/TPB, TTM, HBM, and other major constructs and theories.  The course reinforced empirical research in behavioral sciences through reading and critique.  Assessment included responses to assigned readings, and a summative research paper.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Seminar in Resiliency and Optimism</strong></td>
-  	  	<td>ESCP8087</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This advanced look at constructs in positive psychology further explored the role of resiliency and optimism within a primary educational context.   The roles of intrinsic motivation and positive identity in education, with practices in application, were emphasized.  This course was assessed with weekly assignments and a summative research paper.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Psychology of Sport</strong></td>
-  	  	<td>ESCP8240</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course explored perspectives of traditional leisure experiences with an emphasis on application to sport settings.  Topics pertinent to my area of expertise included deep analysis and techniques of self-efficacy, a refined look at intrinsic motivation, including the role of autonomy, challenge, and belonging (through team-building).  Assessment was conducted through weekly participation, assignments, and a comprehensive summative project.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Qualitative Fieldwork</strong></td>
-  	  	<td>ESCP8085</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>In this course, I applied a general interview-based qualitative research method towards the problem of interest development.  We studied players of tabletop role-playing games to ascertain the process by which they developed their interest, highlighting the importance of identity in the interest-building and leisure engagement process.  IRB training and approval, instrument development, participant recruitment, interview techniques, transcription and coding were the primary bases of learning and assessment.</td>
-  	  </tr>
-  	  
-  	</tbody>
-  </table>	
-
+      <table>
+      	<thead>
+      	  <tr>
+      	    <td>Course Name</td>
+      	    <td>Course Number</td>
+      	    <td>Grade</td>
+      	  </tr>
+      	</thead>
+      	<tbody>
+      	  <tr>
+      	  	<td><strong>Social & Emotional Development</strong></td>
+      	  	<td>HDFS8440</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This was a seminar course on the emotional and social development in children and adolescents, which focused on contemporary research and major theories in family, school, and societal contribution. It provided essential perspectives on identity development, which is critical to an understanding of motivational psychology, particularly the acquisition of interests.  Assessment included discussion and a research paper on a selected topic.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Motivation</strong></td>
+      	  	<td>ESCP9450</td>
+      	  	<td>B</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course explores major motivational constructs and theories, including topics like extrinsic and intrinsic motivation, optimal arousal, goal orientation, self efficacy, task value, and cultural implications of motivation. Assessment included application through analysis of personal reflections and interviews, as well as a research paper on a selected topic.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Constructs of Leisure</strong></td>
+      	  	<td>PRT8400</td>
+      	  	<td>B</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course provided an in-depth examination of leisure constructs, or intrinsic motivation.  Reviews of contemporary research and classical applications of psycho-social theories of leisure behavior were followed by class discussion with application to recreational settings.  The course was assessed with weekly essays and discussion participation.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Seminar in Positive Psychology</strong></td>
+      	  	<td>ESCP7087</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course reviewed variables in human well-being, such as optimism, resilience, and self-efficacy.  The majority of topics were applicable to an understanding of human motivation, particularly intrinsic motivation topics like Self Determination Theory and the Theory of Flow.  Assessment included weekly essays and a summative research paper.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Social and Behavioral Sciences in Public Health</strong></td>
+      	  	<td>PHTH8920</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course examined major theories of motivation and behavior within the public health context.  It included an applied analysis of TRA/TPB, TTM, HBM, and other major constructs and theories.  The course reinforced empirical research in behavioral sciences through reading and critique.  Assessment included responses to assigned readings, and a summative research paper.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Seminar in Resiliency and Optimism</strong></td>
+      	  	<td>ESCP8087</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This advanced look at constructs in positive psychology further explored the role of resiliency and optimism within a primary educational context.   The roles of intrinsic motivation and positive identity in education, with practices in application, were emphasized.  This course was assessed with weekly assignments and a summative research paper.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Psychology of Sport</strong></td>
+      	  	<td>ESCP8240</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course explored perspectives of traditional leisure experiences with an emphasis on application to sport settings.  Topics pertinent to my area of expertise included deep analysis and techniques of self-efficacy, a refined look at intrinsic motivation, including the role of autonomy, challenge, and belonging (through team-building).  Assessment was conducted through weekly participation, assignments, and a comprehensive summative project.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Qualitative Fieldwork</strong></td>
+      	  	<td>ESCP8085</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>In this course, I applied a general interview-based qualitative research method towards the problem of interest development.  We studied players of tabletop role-playing games to ascertain the process by which they developed their interest, highlighting the importance of identity in the interest-building and leisure engagement process.  IRB training and approval, instrument development, participant recruitment, interview techniques, transcription and coding were the primary bases of learning and assessment.</td>
+      	  </tr>
+      	  
+      	</tbody>
+      </table>	
+    </div>
+  </div>
+  <%= render 'layouts/sidebar' %>
 </div>
