--- a/app/views/pages/research_and_writing.html.erb
+++ b/app/views/pages/research_and_writing.html.erb
@@ -5,104 +5,109 @@
 </header>
 
 <div class="row">
-  <p>This section includes research and scholarly writing experiences such as:</p>
-</div>
+  <div class="large-9 push-3 columns">
+    <div class="row">
+      <p>This section includes research and scholarly writing experiences such as:</p>
+    </div>
 
-<div class="row">
-  <div class="large-10 large-offset-1 columns">
-    <ul>
-  	  <li>Coursework taken in the area of research and statistics</li>
-  	  <li>Submitted manuscripts or published articles</li>
-  	  <li>Study designs, such as a form of a dissertation or research prospectus</li>
-  	  <li>Reports about data collection methods I have implemented or data analysis work I have completed</li>
-  	  <li>Research accepted for presentations or poster sessions at local and regional conferences</li>
-    </ul>
+    <div class="row">
+      <div class="large-10 large-offset-1 columns">
+        <ul>
+      	  <li>Coursework taken in the area of research and statistics</li>
+      	  <li>Submitted manuscripts or published articles</li>
+      	  <li>Study designs, such as a form of a dissertation or research prospectus</li>
+      	  <li>Reports about data collection methods I have implemented or data analysis work I have completed</li>
+      	  <li>Research accepted for presentations or poster sessions at local and regional conferences</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <p>My research experience consists primarily of coursework, as well as some fieldwork in qualitative research and a conference presentation that was accepted for the Northeastern Recreation Research Symposium.</p>
+      <table>
+      	<thead>
+      	  <tr>
+      	    <td>Course Name</td>
+      	    <td>Course Number</td>
+      	    <td>Grade</td>
+      	  </tr>
+      	</thead>
+      	<tbody>
+      	  <tr>
+      	  	<td><strong>Research in Education</strong></td>
+      	  	<td>EDUC5000</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course explored educational research methodologies, discussed the isolation of research problems, and emphasized the practice of reading and interpreting academic research reports, including the application of these skills.  The course was assessed by weekly assignments and a summative research paper.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Evaluating Teaching and Learning</strong></td>
+      	  	<td>EDUC5200</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course served as an introduction to psychometric measurement and subject evaluation.  The curriculum included basic statistical applications in measurement (percentile rank, t-tests, t/z-scores, chi square, etc.), reliability, validity and objectivity, test item construction, textual analysis, and assessment and grading philosophy.  This course was assessed via weekly assignments and a summative project.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Intro to Educational Statistics</strong></td>
+      	  	<td>ESCP7170</td>
+      	  	<td>B</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This lecture course introduced basic statistical techniques used on educational research, including descriptive statistics, correlation, simple regression and hypothesis testing.  The course was assessed via in-class exams.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Regression in Applied Research</strong></td>
+      	  	<td>ESCP8820</td>
+      	  	<td>B</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course introduced simple linear regression, multiple regression, an introduction to matrix algebra, partial and semipartial correlation, multiple regression for prediction, hierarchical modeling, polynomial regression, and regression analysis with categorical and continuous property independent variables.  This course was assessed through exam and a summative project.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Analysis of Variance in Applied Research</strong></td>
+      	  	<td>ESCP8810</td>
+      	  	<td>B</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course focused upon analysis of variance (ANOVA) and included the following topics: simple and complex between and within subject designs, hypothesis testing (contrasts), interpreting interactions, trend analysis, and analysis of covariance.  The course was assessed through examination.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Problems: Qualitative Field Research</strong></td>
+      	  	<td>ESCP8085</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>In this course, I applied a general interview-based qualitative research method towards the problem of interest development.  IRB training and approval, instrument development, participant recruitment, interview techniques, transcription and coding were the primary bases of learning and assessment.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Qualitative Methods in Educ. Research I	</strong></td>
+      	  	<td>ESCP8630</td>
+      	  	<td>C</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>In this course, we discussed the types of qualitative research, their purposes, and methods in data collection and analysis.  Peer groups worked towards the application of independent research topics, and issues in qualitative research were explored.  Assessment included weekly reflective journals and the completion of a small-scale qualitative research project with poster presentation.</td>
+      	  </tr>
+      	  <tr>
+      	  	<td><strong>Applications of Multivariate Analysis</strong></td>
+      	  	<td>ESCP8630</td>
+      	  	<td>A</td>
+      	  </tr>
+      	  <tr>
+      	  	<td>This course examined techniques for multivariate statistical analysis.  Applications of multiple regression, MANOVA, MANCOVA, PCA, factor analysis, DFA, CFA, EFA, logistic and canonical regression, SEM were placed within research contexts and applied with appropriate statistical packages.  The course was assessed with a midterm examination, homework assignments and a summative research project.</td>
+      	  </tr>
+      	  
+      	</tbody>
+      </table>	
+
+      <h4>Publications:</h4>
+      <div class="panel">
+      	<p>Bai, H.; Brunette, C.A.; Chompreeda, K.; Gao, J.; Gil Arroyo, C.L.; Lin, L; Martin, A.T.; Sartorius, C.J.; Steuber, C.L.; Vock, M.L.; Winn III, J.E.; Sotomayor, S. and Barbieri, C.. Spirituality and Leisure: An Auto-Ethnographic Life-History Study. Abstract accepted for an oral presentation at the 2011 Northeastern Recreation Research (NERR) Symposium. Sagamore Resort, Bolton Landing, NY. (April 10 – April 12, 2011).</p>
+      </div>
+      
+      <p>This study was a qualitative auto-ethnographic life history study, meaning that the researchers were the participants.  Collectively and with the support of a third-party data collector, questions about the interactive role between leisure participation and religious affiliation were explored in a group discussion format.  The study revealed many ways in which spirituality might impact leisure behavior.  We presented our findings at the Northeastern Recreation Research Symposium in 2011, a scholarly conference for recreation and leisure studies.</p>	
+    </div>
   </div>
-</div>
-
-<div class="row">
-  <p>My research experience consists primarily of coursework, as well as some fieldwork in qualitative research and a conference presentation that was accepted for the Northeastern Recreation Research Symposium.</p>
-  <table>
-  	<thead>
-  	  <tr>
-  	    <td>Course Name</td>
-  	    <td>Course Number</td>
-  	    <td>Grade</td>
-  	  </tr>
-  	</thead>
-  	<tbody>
-  	  <tr>
-  	  	<td><strong>Research in Education</strong></td>
-  	  	<td>EDUC5000</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course explored educational research methodologies, discussed the isolation of research problems, and emphasized the practice of reading and interpreting academic research reports, including the application of these skills.  The course was assessed by weekly assignments and a summative research paper.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Evaluating Teaching and Learning</strong></td>
-  	  	<td>EDUC5200</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course served as an introduction to psychometric measurement and subject evaluation.  The curriculum included basic statistical applications in measurement (percentile rank, t-tests, t/z-scores, chi square, etc.), reliability, validity and objectivity, test item construction, textual analysis, and assessment and grading philosophy.  This course was assessed via weekly assignments and a summative project.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Intro to Educational Statistics</strong></td>
-  	  	<td>ESCP7170</td>
-  	  	<td>B</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This lecture course introduced basic statistical techniques used on educational research, including descriptive statistics, correlation, simple regression and hypothesis testing.  The course was assessed via in-class exams.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Regression in Applied Research</strong></td>
-  	  	<td>ESCP8820</td>
-  	  	<td>B</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course introduced simple linear regression, multiple regression, an introduction to matrix algebra, partial and semipartial correlation, multiple regression for prediction, hierarchical modeling, polynomial regression, and regression analysis with categorical and continuous property independent variables.  This course was assessed through exam and a summative project.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Analysis of Variance in Applied Research</strong></td>
-  	  	<td>ESCP8810</td>
-  	  	<td>B</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course focused upon analysis of variance (ANOVA) and included the following topics: simple and complex between and within subject designs, hypothesis testing (contrasts), interpreting interactions, trend analysis, and analysis of covariance.  The course was assessed through examination.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Problems: Qualitative Field Research</strong></td>
-  	  	<td>ESCP8085</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>In this course, I applied a general interview-based qualitative research method towards the problem of interest development.  IRB training and approval, instrument development, participant recruitment, interview techniques, transcription and coding were the primary bases of learning and assessment.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Qualitative Methods in Educ. Research I	</strong></td>
-  	  	<td>ESCP8630</td>
-  	  	<td>C</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>In this course, we discussed the types of qualitative research, their purposes, and methods in data collection and analysis.  Peer groups worked towards the application of independent research topics, and issues in qualitative research were explored.  Assessment included weekly reflective journals and the completion of a small-scale qualitative research project with poster presentation.</td>
-  	  </tr>
-  	  <tr>
-  	  	<td><strong>Applications of Multivariate Analysis</strong></td>
-  	  	<td>ESCP8630</td>
-  	  	<td>A</td>
-  	  </tr>
-  	  <tr>
-  	  	<td>This course examined techniques for multivariate statistical analysis.  Applications of multiple regression, MANOVA, MANCOVA, PCA, factor analysis, DFA, CFA, EFA, logistic and canonical regression, SEM were placed within research contexts and applied with appropriate statistical packages.  The course was assessed with a midterm examination, homework assignments and a summative research project.</td>
-  	  </tr>
-  	  
-  	</tbody>
-  </table>	
-
-  <h4>Publications:</h4>
-  <div class="panel">
-  	<p>Bai, H.; Brunette, C.A.; Chompreeda, K.; Gao, J.; Gil Arroyo, C.L.; Lin, L; Martin, A.T.; Sartorius, C.J.; Steuber, C.L.; Vock, M.L.; Winn III, J.E.; Sotomayor, S. and Barbieri, C.. Spirituality and Leisure: An Auto-Ethnographic Life-History Study. Abstract accepted for an oral presentation at the 2011 Northeastern Recreation Research (NERR) Symposium. Sagamore Resort, Bolton Landing, NY. (April 10 – April 12, 2011).</p>
-  </div>
-  
-  <p>This study was a qualitative auto-ethnographic life history study, meaning that the researchers were the participants.  Collectively and with the support of a third-party data collector, questions about the interactive role between leisure participation and religious affiliation were explored in a group discussion format.  The study revealed many ways in which spirituality might impact leisure behavior.  We presented our findings at the Northeastern Recreation Research Symposium in 2011, a scholarly conference for recreation and leisure studies.</p>	
+  <%= render 'layouts/sidebar' %>
 </div>
