--- a/app/views/pages/teaching.html.erb
+++ b/app/views/pages/teaching.html.erb
@@ -5,21 +5,26 @@
 </header>
 
 <div class="row">
-  <p>This section includes teaching experiences such as:</p>
-</div>
+  <div class="large-9 push-3 columns">
+	<div class="row">
+	  <p>This section includes teaching experiences such as:</p>
+	</div>
 
-<div class="row">
-  <div class="large-10 large-offset-1 columns">
-	<ul>
-	  <li>Coursework in the area of teaching</li>
-	  <li>Teaching activities</li>
-	  <li>Descriptions of activities as a teaching assistant</li>
-	  <li>Syllabi I have developed for courses</li>
-	  <li>Presentations I have made in courses</li>
-	  <li>Instructional materials I have developed and tested with students</li>
-	</ul>
+	<div class="row">
+	  <div class="large-10 large-offset-1 columns">
+		<ul>
+		  <li>Coursework in the area of teaching</li>
+		  <li>Teaching activities</li>
+		  <li>Descriptions of activities as a teaching assistant</li>
+		  <li>Syllabi I have developed for courses</li>
+		  <li>Presentations I have made in courses</li>
+		  <li>Instructional materials I have developed and tested with students</li>
+		</ul>
+	  </div>
+	</div>
+
+	<div class="row">
+	</div>
   </div>
-</div>
-
-<div class="row">
+  <%= render 'layouts/sidebar' %>
 </div>
