--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
   <body>
     <div class="content">
   	  <%= render 'layouts/navigation' %>
+      
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
   
       <%= yield %>
 
