--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <div class="row">
   <div class="large-7 large-centered columns"><h1>Welcome to my portfolio!</h1></div>
 </div>
