--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
       <li class="divider"></li>
       <li><a href="#">Curriculum Vitae</a></li>
       <li class="divider"></li>
-      <li><a href="#">Blog</a></li>
+      <li><%= link_to "Blog", posts_path %></li>
       <li class="divider"></li>
       <li class="has-dropdown"><a href="#">Doctoral Portfolio</a>
 
@@ -43,6 +43,9 @@
       </li>
       <li class="divider"></li>
       <li><a href="#">Contact</a></li>
+      <li><% if current_admin %>
+          <%= link_to('Logout', destroy_admin_session_path, :method => :delete) %>   
+      <% end %></li>
     </ul>
   </section>
 </nav>
